--- a/contacto.html
+++ b/contacto.html
@@ -40,7 +40,7 @@
                     <a style="color: rgba(0, 0, 0, 0.5);" class="nav-link" href="aboutme.html">
                         Acerca de mi
                     </a>
-                </div>Acerca de mí
+                </div>
                 <div class="col-md-1 head-box">
                     <a style="color: rgba(0, 0, 0, 0.5);" class="nav-link" href="contacto.html">Contacto
                         <div class="line">
